--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-html5video": "^2.5.1"
+    "react-html5video": "^2.5.1",
+    "react-icons": "^4.10.1",
+    "react-spring": "^9.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
