--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-html5video": "^2.5.1",
     "react-icons": "^4.10.1",
+    "react-router-dom": "^6.14.2",
     "react-spring": "^9.7.2"
   },
   "devDependencies": {
